--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,32 +1,52 @@
-
-.header__container{
+.header__container {
     background-color: #f9f9f9;
     box-shadow: 2px 2px 2px rgb(230, 222, 222);
+    max-height: 200px;
 }
 
-.header__nav{
-    padding-bottom: 1em;
+.header__nav {
+    /* padding-bottom: 1em; */
 }
 
-.Header__logo{
+.Header__logo {
     display: flex;
     justify-content: center;
-    padding: 20px;
+    padding-top: 20px;
     cursor: pointer;
 }
 
-.Header__logo > img{
+.Header__logo>img {
     height: 100px;
- }
+}
 
-.Header__li{
+.Header__li {
     width: 120px;
     text-align: center;
-    font-family: Raleway, "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #5d5d5d;
+    font-family: Raleway, HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: rgb(93, 93, 93);
     font-size: 14px;
     line-height: 1.42857143;
     font-weight: 600;
     cursor: pointer;
+  
 }
 
+a {
+    all: unset;
+    cursor: pointer;
+}
+
+.header__sticky{
+    height: 88vh;
+}
+
+.header__container-li {
+    position: sticky;
+    position: sticky;
+    top: -1px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    background-color: #f9f9f9;
+    z-index: 20;
+}
