--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,11 @@
 
 @media only screen and (max-width: 800px) {
   .container__app {
-    grid-template-rows: 200px 1fr 90px !important;
+    grid-template-rows: 200px 1fr 500px !important;
     height: 100vh;
+    width: 100vw;
   }
+
 }
 
 
